Update project configuration and database connection string add enpoints #1

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conn": "Server=localhost;Database=hhdb;User Id=sa;Password=C#14.12.2023;TrustServerCertificate=true"
+    "conn": "Server=localhost;Database=myprojectdb;User Id=sa;Password=\"C#14.12.2023\";TrustServerCertificate=true"
   }
 }
